--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,30 +1,25 @@
-* {
-    box-sizing: border-box;
-}
-
 body {
-    padding: 0px;
-    min-width: 360px;
-    max-width: 750px;
-    margin: 0 auto !important;
-    font-family: "Montserrat", sans-serif !important;
-    background-color: #FAF9FF !important;
+  padding: 0px;
+  min-width: 360px;
+  max-width: 750px;
+  margin: 0 auto !important;
+
+  background-color: #faf9ff !important;
 }
 
-.background-theme{
-     background-color: #FAF9FF !important;
- }
-.black{
-    background-color: black;
+.background-theme {
+  background-color: #faf9ff !important;
+}
+.black {
+  background-color: black;
 }
 
-@media screen and (max-width: 1000px) {
-    body {
-
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        padding: 0;
-    }
-}
+/* @media screen and (max-width: 1000px) {
+  body {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 0;
+  }
+} */
